# reversi

./: Cargo.toml  readme.md
src/: lib.rs
