[package]
name = "reversi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]

[dependencies]
async-trait = "0.1.88"
http = "1.3.1"
rustls = "0.23.27"

[dependencies.pingora]
git = "https://github.com/JockeTF/pingora.git"
branch = "feature/rustls-resolver"
features = ["proxy", "rustls"]

[lints.clippy]
pedantic = "warn"
